<resources>
    <string name="app_name">Shopping App</string>
    <string name="product_image">Product Image</string>
    <string name="buy_product">Buy Product</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="thank_you">Thank You!!!</string>
    <string name="thank_you_message">   Thank you for purchasing \n     %1$s </string>
    <string name="shipping_details">You will soon get an email confirming the order. Your product will be shipped within 4–5 days.</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="pay">Pay</string>
    <string name="subtract">-</string>
    <string name="add">+</string>
    <string name="get_back_to_n_main_screen">Get back to \n Main Screen</string>
</resources>